@@ -30,7 +30,6 @@ standard-define			4
 
 # Value: int
 tab-width:			8
-indicator-column:		7
 text-column:			72
 word-length:			31
 literal-length:			180 # TO-DO: Check max hex string length is 360.
