@@ -25,7 +25,6 @@ name: "GCOS"
 standard-define			7 # Builds on COBOL-85
 
 tab-width:			8
-indicator-column:		7
 text-column:			72
 word-length:			30
 literal-length:			256
