@@ -28,7 +28,6 @@ standard-define			7 # Uses COBOL-85 currently
 
 # Value: int
 tab-width:			8
-indicator-column:		7
 text-column:			72
 word-length:			60 # to check
 literal-length:			160
