@@ -30,7 +30,6 @@ standard-define			6
 
 # Value: int
 tab-width:			8  # not verified yet
-indicator-column:		7
 text-column:			72 # TO-DO: add >>IMP MARGIN-R (see p. 50)
 # Maximum word-length for COBOL words / Programmer defined words
 # current max (COB_MAX_WORDLEN): 63
