@@ -40,7 +40,6 @@ standard-define			7	# uses COBOL85 currently
 
 # Value: int
 tab-width:			8
-indicator-column:		7
 text-column:			72
 word-length:			30
 literal-length:			160
