@@ -414,7 +414,6 @@ AT_CHECK([$COMPILE_ONLY -conf=test.conf prog.cob], [1], [],
 test.conf: missing definitions:
 	no definition of 'reserved-words'
 	no definition of 'tab-width'
-	no definition of 'indicator-column'
 	no definition of 'text-column'
 	no definition of 'pic-length'
 	no definition of 'word-length'
@@ -819,10 +818,22 @@ AT_DATA([prog.cob], [
  DATA             DIVISION.
  WORKING-STORAGE  SECTION.
  PROCEDURE        DIVISION.
+     DISPLAY '     20        30        40         50       60        70'
      STOP RUN.
 ])
 
-AT_CHECK([$COMPILE_ONLY -findicator-column=1 -fcomment-paragraphs=ok prog.cob],
+AT_CHECK([$COMPILE_ONLY -findicator-column=0 -fcomment-paragraphs=ok prog.cob],
+[1], [],
+[cobc: error: invalid parameter: -findicator-column
+])
+AT_CHECK([$COMPILE_ONLY -findicator-column=1 -ftext-column=72 -fcomment-paragraphs=ok prog.cob],
 [0], [], [])
+AT_CHECK([$COMPILE_ONLY -findicator-column=1 -ftext-column=71 -fcomment-paragraphs=ok prog.cob],
+[1], [],
+[prog.cob:9: error: continuation character expected
+prog.cob:8: error: invalid literal: ' 20 30 40 50 60 70 ...'
+prog.cob:8: error: missing terminating ' character
+prog.cob:8: error: syntax error, unexpected end of file
+])
 
 AT_CLEANUP
