@@ -1,4 +1,8 @@
 
+2022-06-24  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
+
+	* general: remove indicator-column option, which is now a flag
+
 2022-02-07  David Declerck <david.declerck@ocamlpro.com>
 
 	* gcos-strict.conf, gcos.conf, gcos.words: added config files for
